# hippo-modified

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HippoRAG.py  TEIRerank.py  embedding_store.py  milvus.py  pyproject.toml  rerank.py  treeindex.py
embedding_model/: TextEmbeddingsInference.py  __init__.py
hippo_modified/: AsyncHippoRAG.py  HippoRAG.py  __init__.py  embedding_store.py  rerank.py
hippo_modified/client/: AsyncHippoRAG.py  HippoRAG.py  __init__.py  _abc.py  base.py
hippo_modified/embedding_model/: Contriever.py  GritLM.py  NVEmbedV2.py  OpenAI.py  __init__.py  base.py
hippo_modified/embedding_store/: __init__.py  base.py  dataframe.py  milvus.py
hippo_modified/evaluation/: base.py  qa_eval.py  retrieval_eval.py
hippo_modified/information_extraction/: __init__.py  openie_openai.py  openie_vllm_offline.py
hippo_modified/llm/: __init__.py  base.py  openai_gpt.py  vllm_offline.py
hippo_modified/prompts/: __init__.py  filter_default_prompt.py  linking.py  prompt_template_manager.py
hippo_modified/prompts/templates/: ircot_hotpotqa.py  ircot_musique.py  ner.py  ner_query.py  rag_qa_musique.py  rag_qa_musique_bkp.py  triple_extraction.py
hippo_modified/utils/: config_utils.py  embed_utils.py  llm_utils.py  logging_utils.py  misc_utils.py  qa_utils.py  typing.py
information_extraction/: openie_openai.py
llm/: openai_gpt.py  vllm_offline.py
prompts/: filter_default_prompt.py
prompts/templates/: ner.py  rag_qa_musique.py  triple_extraction.py
utils/: config_utils.py  misc_utils.py
