[project]
name = "hippo-modified"
version = "2.4.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "李世元", email = "lishiyuan@fmsh.com.cn" },
    { name = "蒋正颀", email = "jiangzhengqi@fmsh.com.cn" },
]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "filelock",
    "openai>=1.58.1",
    "pandas",
    "pydantic>=2.10.4",
    "python-igraph==0.11.8",
    "tenacity>=8.5.0",
    "tqdm",
    "transformers>=4.51",
    "wrapt>=1.17.2",
]

[dependency-groups]
dev = [
    "mypy==1.17.0",
    "ruff==0.12.5",
    "ty==0.0.1a16",
    "hippo-modified[milvus]",
    "pre-commit==4.2.0",
]

[project.optional-dependencies]
milvus = ["pymilvus>=2.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
prerelease = "if-necessary-or-explicit"
no-sources = false
index-strategy = "unsafe-best-match"
environments = ["platform_machine == 'x86_64'"]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }]]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.ruff]
extend-exclude = ["*.pyi"]
line-length = 119
indent-width = 4
target-version = "py310"
preview = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-future-annotations
    "FA",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # flake8-type-checking
    "TC",
    # isort
    "I",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # Perflint
    "PERF",
]
ignore = [
    "B007",
    "COM812",
    "COM819",
    "D100",
    "D203",
    "D213",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "SIM300",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF013",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = [
    "typing",
    "typing_extensions",
    "collections.abc",
    "pathlib",
    "numpy.typing",
]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call", "attrs.define"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
warn_redundant_casts = true
disable_error_code = "import-untyped"
enable_error_code = "possibly-undefined,unused-awaitable,unused-ignore"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
